# sd-histogrammer

./: .gitignore  CMakeLists.txt
conf/: config.h
examples/: simple-query.cpp
lib/: CMakeLists.txt
lib/connection/: iface.h
lib/connection/mock/: CMakeLists.txt  connector.cpp  connector.h
lib/connection/vk-api/: CMakeLists.txt  connector.cpp  connector.h
lib/http/: iface.h
lib/http/client/: CMakeLists.txt  client.cpp  client.h
lib/http/mock/: CMakeLists.txt  client.cpp  client.h
lib/utils/: CMakeLists.txt  pretty.cpp  pretty.h
tests/vk/: tests.cpp
tests/vk/data/: fake_server_basic_items.json
tests/vk/fake-server/: CMakeLists.txt  main.cpp  server.cpp  server.h
